feat: BaseCode로 교체 및 미션 구현
- 웹소켓 구현
- SSE 구현